[package]
name = "oxidized_transactions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
itertools = "0.10.3"
serde_with = "1.12.0"
serde = { version = "1.0.136", features = ["derive"] }
